--- a/ISCB20.01-TeX/preamble.tex
+++ b/ISCB20.01-TeX/preamble.tex
@@ -1,6 +1,8 @@
 \documentclass[10pt,dvipsnames, aspectratio=169]{beamer}
 \usetheme[progressbar=frametitle]{metropolis}
 \usepackage[]{verbatim}\usepackage[]{}
+\usepackage[utf8]{inputenc}
+\usepackage[english]{babel}
 \usepackage{booktabs}
 \usepackage[scale=2]{ccicons}
 \usepackage[misc]{ifsym}
@@ -8,7 +10,18 @@
 \usepackage{listings}
 \usepackage{xspace}
 \usepackage{amsmath}
+\usepackage{listings}
 \usepackage{xcolor}
+\usepackage{listings}
+
+% Table
+\usepackage{array}
+\newcommand{\PreserveBackslash}[1]{\let\temp=\\#1\let\\=\temp}
+\newcolumntype{C}[1]{>{\PreserveBackslash\centering}p{#1}}
+\newcolumntype{R}[1]{>{\PreserveBackslash\raggedleft}p{#1}}
+\newcolumntype{L}[1]{>{\PreserveBackslash\raggedright}p{#1}}
+
+
 \usepackage{ragged2e}\justifying % for justify content % Customize 
 \setlength{\parskip}{5pt} % vertical spacing between 2 paragraphs
 \setbeamersize{text margin left=12mm, text margin right=12mm} 
@@ -28,9 +41,9 @@
 
 % Title Page of Presentation 
 % WARNING: Don't change logo, just write your details 
-\title{ISCB20.01 - Introduction to LINUX for Biologists}
+\title{ISCB20.01 -- Introduction to LINUX for Biologists}
 \date{\today}
-\author{Md. Jubayer Hossain\\
+\author{Md. Jubayer Hossain \\ 
         https://jhossain.me/}
 \institute{Lead Organizer, Introduction to Scientific Computing for Biologists 
 \\ Founder, Health Data Research Organization}
