--- a/ISCB20.01-TeX/preamble-sammo.tex
+++ b/ISCB20.01-TeX/preamble-sammo.tex
@@ -13,7 +13,7 @@
 \usepackage{listings}
 \usepackage{xcolor}
 \usepackage{listings}
-\usepackage[T1]{fontenc}
+
 % Table
 \usepackage{array}
 \newcommand{\PreserveBackslash}[1]{\let\temp=\\#1\let\\=\temp}
@@ -43,8 +43,8 @@
 % WARNING: Don't change logo, just write your details 
 \title{ISCB20.01 -- Introduction to LINUX for Biologists}
 \date{\today}
-\author{Md. Jubayer Hossain \\ 
-        https://jhossain.me/}
-\institute{Lead Organizer, Introduction to Scientific Computing for Biologists 
-\\ Founder, Health Data Research Organization}
+\author{Atik Shahriar Sammo \\ 
+        sammo@hdrobd.org}
+\institute{Instructor, Introduction to Scientific Computing for Biologists 
+\\ Project Co-ordinator, Health Data Research Organization}
 \titlegraphic{\vspace{4cm}\hfill\includegraphics[height=1cm]{img/hdro2}}
