--- a/ISCB20.01-TeX/section-1.2.tex
+++ b/ISCB20.01-TeX/section-1.2.tex
@@ -82,9 +82,9 @@
 		\begin{itemize}
 			\item \textbf{Step-1:}  Open with Other Application 
 			\item \textbf{Step-2:}  Select $\rightarrow$ GDebi Package Installer
-			\item \textbf{Step-:3}  Click $\rightarrow$ Install Package 
-			\item \textbf{Step-:4}  Give Your Password 
-			\item \textbf{Step-:5}  Close 
+			\item \textbf{Step-3:}  Click $\rightarrow$ Install Package 
+			\item \textbf{Step-4:}  Give Your Password 
+			\item \textbf{Step-5:}  Close 
 		\end{itemize}
 	\end{itemize}
 \end{frame}
@@ -95,12 +95,12 @@
 		\item \textbf{Download Chrome for Linux:} 
 		\url{https://www.google.com/chrome/}
 		\item \textbf{Install Chrome} 
-		\begin{itemize}
+			\begin{itemize}
 			\item \textbf{Step-1:}  Open with Other Application 
 			\item \textbf{Step-2:}  Select $\rightarrow$ GDebi Package Installer
-			\item \textbf{Step-:3}  Click $\rightarrow$ Install Package 
-			\item \textbf{Step-:4}  Give Your Password 
-			\item \textbf{Step-:5}  Close 
+			\item \textbf{Step-3:}  Click $\rightarrow$ Install Package 
+			\item \textbf{Step-4:}  Give Your Password 
+			\item \textbf{Step-5:}  Close 
 		\end{itemize}
 	\end{itemize}
 \end{frame}
@@ -110,12 +110,12 @@
 		\item \textbf{Download Slack for Linux:} 
 		\url{https://slack.com/intl/en-bd/downloads/linux}
 		\item \textbf{Install Slack} 
-		\begin{itemize}
+			\begin{itemize}
 			\item \textbf{Step-1:}  Open with Other Application 
 			\item \textbf{Step-2:}  Select $\rightarrow$ GDebi Package Installer
-			\item \textbf{Step-:3}  Click $\rightarrow$ Install Package 
-			\item \textbf{Step-:4}  Give Your Password 
-			\item \textbf{Step-:5}  Close 
+			\item \textbf{Step-3:}  Click $\rightarrow$ Install Package 
+			\item \textbf{Step-4:}  Give Your Password 
+			\item \textbf{Step-5:}  Close 
 		\end{itemize}
 	\end{itemize}
 \end{frame}
@@ -156,12 +156,12 @@
 	\begin{itemize}
 		\item 
 		\textbf{Download--}\url{https://rstudio.com/products/rstudio/download/}
-		\begin{itemize}
+			\begin{itemize}
 			\item \textbf{Step-1:}  Open with Other Application 
 			\item \textbf{Step-2:}  Select $\rightarrow$ GDebi Package Installer
-			\item \textbf{Step-:3}  Click $\rightarrow$ Install Package 
-			\item \textbf{Step-:4}  Give Your Password 
-			\item \textbf{Step-:5}  Close 
+			\item \textbf{Step-3:}  Click $\rightarrow$ Install Package 
+			\item \textbf{Step-4:}  Give Your Password 
+			\item \textbf{Step-5:}  Close 
 		\end{itemize}
 	\end{itemize}
 \end{frame}
@@ -171,12 +171,12 @@
 		\item 
 		\textbf{Download--}\url{https://code.visualstudio.com/download}
 		\begin{itemize}
-			\item \textbf{Step-1:}  Open with Other Application 
-			\item \textbf{Step-2:}  Select $\rightarrow$ GDebi Package Installer
-			\item \textbf{Step-:3}  Click $\rightarrow$ Install Package 
-			\item \textbf{Step-:4}  Give Your Password 
-			\item \textbf{Step-:5}  Close 
-		\end{itemize}
+		\item \textbf{Step-1:}  Open with Other Application 
+		\item \textbf{Step-2:}  Select $\rightarrow$ GDebi Package Installer
+		\item \textbf{Step-3:}  Click $\rightarrow$ Install Package 
+		\item \textbf{Step-4:}  Give Your Password 
+		\item \textbf{Step-5:}  Close 
+	\end{itemize}
 	\end{itemize}
 \end{frame}
 
@@ -207,12 +207,12 @@
 		\url{https://www.mendeley.com/download-desktop-new/}
 		\item \textbf{Install Slack} 
 		\begin{itemize}
-			\item \textbf{Step-1:}  Open with Other Application 
-			\item \textbf{Step-2:}  Select $\rightarrow$ GDebi Package Installer
-			\item \textbf{Step-:3}  Click $\rightarrow$ Install Package 
-			\item \textbf{Step-:4}  Give Your Password 
-			\item \textbf{Step-:5}  Close 
-		\end{itemize}
+		\item \textbf{Step-1:}  Open with Other Application 
+		\item \textbf{Step-2:}  Select $\rightarrow$ GDebi Package Installer
+		\item \textbf{Step-3:}  Click $\rightarrow$ Install Package 
+		\item \textbf{Step-4:}  Give Your Password 
+		\item \textbf{Step-5:}  Close 
+	\end{itemize}
 	\end{itemize}
 \end{frame}
 
